# lily

./: .env.example  .gitignore  .pre-commit-config.yaml  2026-02-13_22-48-07__Dream-Lily-Phase-1-Behavior-Spec__chat.md  AGENTS.md  ARCHITECTURE_REFACTORING.md  CONTRIBUTING.md  Makefile  README.md  justfile  lily_patch_additions.md.completed  mkdocs.yml  pyproject.toml
.ai/: HANDOFF.md  HUMAN_RUNBOOK.md  RULES.md
.ai/COMMANDS/: check_tests.md  commit.md  create-prd.md  create-rules.md  execute.md  handoff.md  library-skill.md  phase-intent-check.md  plan.md  pr.md  prime.md  push.md  release-notes.md  retro.md  review.md  status-sync.md  tech-debt.md  validate.md
.ai/PLANS/: 001-langchain-agent-kernel-yaml.md  002-conversation-session-attach-resume.md  003-p1-language-restriction-layer.md  003-simple-tool-registry-python-mcp.md  004-p1-trustcall-warning-removal.md  004-skills-prd-architecture.md  005-p4-agent-subsystem-phase0.md  005-skills-system-implementation.md  006-skills-docs-realignment-claude-guide.md  007-conversation-compression-and-skill-injection.md  008-named-agents-and-identity-context.md  008-seedling-copier-template.md  010-current-focus-priority-guardrails.md  014-executable-orchestration-v1-e2e.md  README.md
.ai/REF/: README.md  just-targets.md  plan-authoring.md  status-surfaces.md  testing-and-gates.md
.cursor/commands/: HUMAN_RUNBOOK.md  audit-tests.md  cleanup.md  commit.md  coverage.md  make-pr.md  phase-close.md  plan-close.md  plan.md  release-notes.md  retro.md  start.md  tech-debt.md  test-quality.md  work.md
.cursor/rules/: git-commit.mdc  project-rules.mdc  specify-rules.mdc
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  manual-release.yml  pr_template_check.yml  release.yml  secret-scan.yml
.ivy/: bed.yaml
.lily/: skill_cache.yaml
.lily/config/: agent.toml  agent.yaml  tools.toml  tools.yaml
.lily/skills/: DEMO-summarize-text.md  summarize-text.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
archive/docs/: README.md
archive/ideas/: 2026-02-13_22-48-07__Dream-Lily-Phase-1-Behavior-Spec__chat.md  2026-02-18_22-21-48__Dream-Lily-Tiny-Prompts-blueprints-and-jobs__chat copy.md  2026-02-18_22-21-48__Dream-Lily-Tiny-Prompts-blueprints-and-jobs__chat.md  2026-02-18_Dream-Lily-Tiny-Prompts-blueprints-and-jobs__conversation.md  2026-02-18_OpenClaw-video-transcript.md  later_backlog.md  skills_security.md  tui_repl.md
archive/personas/: barbie.md  chad.md  lily.md
archive/scripts/: demo_council_llm_synth.py  generate_contract_snapshots.py  generate_memory_metrics_snapshot.py  scaffold_tool.py
config/: defaults.yaml
config/memory/: citation_indexed.yaml  longform.yaml  shortform.yaml
docs/: DEVELOPMENT_STRATEGY.md  README.md  architecture.md  deployment.md  getting-started.md  index.md  make.bat  mermaid-test.md  tmp.md
docs/adr/: ADR-001-memory-model.md
docs/archive/: README.md
docs/commands/: index.md
docs/dev/: README.md  architecture_assessment.md  backlog.md  blueprint_authoring_constraints.md  blueprints_execution_plan.md  blueprints_jobs_langgraph_langchain_patterns.md  debt_tracker.md  docs_organization_plan.md  e2e_execution_plan.md  flow.md  jobs_execution_plan.md  later_backlog.md  memory_eval_governance.md  memory_execution_plan.md  memory_m0_baseline_2026-02-16.md  memory_phase7_baseline_vs_post_2026-02-17.md  memory_spec_v0.md  memory_spec_v1.md  persona_commands.md  personality_execution_plan.md  personality_roadmap.md  pr-si007-skills-mvp.md  punchlist.md  roadmap.md  runtime_facade_refactor_plan.md  skills_platform_execution_plan.md  status.md
docs/diagrams/: lily-ai-workflow-rundown.excalidraw  lily-source-rundown.excalidraw  lily-system-design-dataflow.excalidraw
docs/ideas/: reboot.html  reboot.md  tool_registries.md
docs/ops/: blueprints_jobs_runbook_v0.md  memory_backup_restore_runbook.md  memory_schema_migration_playbook.md
docs/process/: docs_cadence.md  needed.md  process.md
docs/reqs/: FEATURES.md  TODO.md
docs/source/: conf.py  index.rst  modules.rst
docs/specs/: README.md
examples/: README.md  __init__.py  basic_resolver_example.py  petal_integration.py  sample.md
flows/: README.md
ideas/: 2026-02-18_22-21-48__Dream-Lily-Tiny-Prompts-blueprints-and-jobs__chat copy.md  docs_site.md  later_backlog.md  layer_01_plan.md  layer_03.md  layer_05.md  layer_05_plan.md  layer_06.md  layer_06_plan.md  quality_upgrade.md  skills_security.md  things_and_layers.md  tui_repl.md
ideas/analysis/: iris-questions.md
ideas/commands/: command_init.md
ideas/core/: architecture.md  two_layer.md
ideas/life_V0/: SESSION_MODEL_V0.md  SKILL_SPEC_V0.md  process.md
ideas/reboot_layers/: layer_00.md  layer_00_plan.md  layer_01_plan.md  layer_02.md  layer_02_plan.md  layer_03_plan.md  layer_04_plan.md  start.md  things_and_layers.md
modules/: README.md
personas/: barbie.md  lily.md
planning/: ARCHITECTURE.md  FEATURES.md  LILY_RULES.md  PERSONAS.yaml  PLANNING.md  TODOS.md
scripts/: __init__.py  check_coverage.py  demo_council_llm_synth.py  demo_langchain_tool_call.py  docs_validator_lib.py  generate_contract_snapshots.py  generate_test_quality_audit.py  install_commit_msg_hook.py  scaffold_tool.py  setup_dev.py  status_report.py  test_pr_body_check.js  validate_docs_frontmatter.py
skills/: README.md
skills/add/: SKILL.md
specs/001-init-command/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-docs-site-infrastructure/: research.md  spec.md  tasks.md
src/lily/: __init__.py  cli.py  cli_options.py  cli_skills.py  cli_skills_presenters.py  docs_validator.py
tests/: __init__.py  conftest.py
tests/contracts/: contract_envelopes.snapshot.json
tests/e2e/: test_cli_agent_run.py  test_cli_skills_commands.py  test_phase1_harness.py  test_phase2_session_commands.py  test_phase3_routing.py  test_phase4_memory_jobs.py  test_phase5_security.py  test_tui_app.py
tests/integration/: test_agent_runtime.py  test_init_integration.py  test_lily_supervisor.py  test_skills_discovery_registry.py  (+2 more)
(+744 files in other folders)
