[project]
name = "lily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.21.1",
    "filelock>=3.17.0",
    "rich>=14.3.2",
    "pyyaml>=6.0.2",
    "langchain>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-openai>=1.1.9",
    "langchain-ollama>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langmem>=0.0.30",
    "tiktoken>=0.12.0",
    "docker>=7.1.0",
    "apscheduler>=3.11.2",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
lily = "lily.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "xenon>=0.9.3",
    "vulture>=2.11",
    "darglint>=1.8",
    "bandit[toml]>=1.7",
    "pip-audit>=2.6",
    "pylint>=3.0",
    "radon>=6.0",
    "commitizen>=3.0",
    "docstr-coverage>=2.3",
    "pre-commit>=4.0",
    "pytest-drill-sergeant>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["src/lily"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
drill_sergeant_enabled = true
drill_sergeant_enforce_markers = true
drill_sergeant_marker_severity = "error"
drill_sergeant_write_markers = true
drill_sergeant_auto_detect_markers = true
drill_sergeant_enforce_aaa = true
drill_sergeant_aaa_mode = "basic"
drill_sergeant_aaa_severity = "warn"
drill_sergeant_enforce_file_length = true
drill_sergeant_max_file_length = 1200
drill_sergeant_file_length_mode = "warn"
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test multiple components together",
    "slow: Tests that take a long time to run",
]
filterwarnings = [
    "error::ResourceWarning",
    "ignore:Importing Send from langgraph.constants is deprecated.*:DeprecationWarning:trustcall\\._base",
    "ignore:Test '.*' is missing '.*' section:pytest.PytestWarning",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "Q",      # flake8-quotes
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
    "ARG",    # flake8-unused-arguments
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PL",     # pylint
    "PERF",   # perflint
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "RUF",    # ruff-specific
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# Tests: allow literal numbers in assertions (PLR2004 "magic value")
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
packages = ["lily"]

# Third-party modules without stubs: allow untyped so strict mode stays tractable
[[tool.mypy.overrides]]
module = ["typer", "filelock", "langmem", "docker", "docker.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/lily"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.xenon]
# Complexity grades A (best) to F (worst). Fail if any block > B, any module > A, or average > A.
max-absolute = "B"
max-modules = "A"
max-average = "A"

[tool.vulture]
paths = ["src", "tests"]
exclude = [".venv", "htmlcov", "**/__pycache__"]
min_confidence = 80
ignore_names = ["*Protocol*", "Protocol"]

[tool.bandit]
exclude_dirs = [".venv", "htmlcov", "__pycache__"]
# Allow assert in test code (B101 = assert_used)
skips = ["B101"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.drill_sergeant]
marker_mappings = { contracts = "integration" }
